# zulon-language

./: .gitignore  ACTUAL_IMPLEMENTATION_STATUS.md  ASYNC_RUNTIME_COMPILER_INTEGRATION_PLAN.md  BUGS_AND_LIMITATIONS.md  CAPTURE_ANALYSIS_COMPLETE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLOSURE_PARSER_IMPLEMENTATION.md  CLOSURE_SESSION_FINAL_SUMMARY.md  CLOSURE_SESSION_SUMMARY.md  CODEBASE_STATUS_REPORT.md  CODE_OF_CONDUCT.md  COLLECTIONS_PROGRESS_REPORT.md  COMPREHENSIVE_LOOP_TEST.md  CONTRIBUTING.md  CURRENT_CAPABILITIES.md  CURRENT_STATUS_REPORT.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  EFFECT_SYSTEM_IMPLEMENTATION_PLAN.md  ERROR_HANDLING_RUNTIME_IMPLEMENTATION.md  ERROR_TRAIT_IMPLEMENTATION_COMPLETE.md  EXAMPLES_INDEX.md  FAQ.md  FOR_LOOP_IMPLEMENTATION_STATUS.md  FROM_TRAIT_ERROR_PROPAGATION_COMPLETE.md  GITHUB_RELEASE_v0.1.0-alpha.md  IMPLEMENTATION_PLAN.md  ITERATIONS_9-11_COMPREHENSIVE_REPORT.md  ITERATION_1_COMPLETE.md  LEXER_ANALYSIS_REPORT.md  LEXER_INTERPOLATION_COMPLETE.md  LICENSE  LLVM_CODEGEN_DESIGN_PHASE4.md  LLVM_IR_BUG_FIX_REPORT.md  MVP_COMPLETION_DECLARATION.md  MVP_V0.1.0_READY_FOR_RELEASE.md  MVP_v0.1.0_COMPLETION_DECLARATION.md  NESTED_LOOP_FIX_COMPLETE.md  (+213 more)
.github/: pull_request_template.md
.serena/: project.yml
archive_old_docs/: BUG_FIX2_COMPLETE_SOLUTION.md  BUG_FIX2_IMPLEMENTATION_COMPLETE.md  EXAMPLE_VERIFICATION_COMPLETE.md  SESSION_SUMMARY_BUG_FIX_2026_01_10.md
archive_old_tests/: simple_test.zl
benchmark_results/: binary_sizes.csv  compile_times.csv  run_times.csv
benchmarks/: arithmetic_bench.cpp  arithmetic_bench.zl  arithmetic_bench_cpp  (+7 more)
crates/zulon-async-futures/: Cargo.toml
crates/zulon-async-futures/src/: context.rs  future.rs  lib.rs  poll.rs  task.rs  waker.rs
crates/zulon-async-runtime/: Cargo.toml
crates/zulon-async-runtime/src/: continuation.rs  effect.rs  event_loop.rs  lib.rs  platform.rs
crates/zulon-build/: Cargo.toml
crates/zulon-build/examples/: arc_demo.rs  arc_demo.rs.bak  arc_demo.rs.bak2  comprehensive_io_demo.rs  comprehensive_io_demo.rs.bak  comprehensive_io_demo.rs.bak2  getchar_demo.rs  getchar_demo.rs.bak  getchar_demo.rs.bak2  greeting_demo.rs  greeting_demo.rs.bak  greeting_demo.rs.bak2  hashmap_demo.rs  hashset_demo.rs  hello_world.rs  print_all.rs  print_all.rs.bak  print_all.rs.bak2  print_call.rs  print_call.rs.bak  print_call.rs.bak2  print_demo.rs  print_demo.rs.bak  print_demo.rs.bak2  println_demo.rs  println_demo.rs.bak  std_core_demo.rs  std_core_demo.rs.bak  std_core_simple.rs  std_core_simple.rs.bak  string_utils_demo.rs  string_utils_demo.rs.bak  string_utils_demo.rs.bak2  vec_demo.rs  vecdeque_demo.rs
crates/zulon-build/src/: error.rs  lib.rs  pipeline.rs
crates/zulon-codegen-llvm/: Cargo.toml
crates/zulon-codegen-llvm/examples/: compile_main.rs  compile_simple_loop.rs  comprehensive_test.rs  debug_ast.rs  debug_hir.rs  debug_lir.rs  debug_lir_loop.rs  debug_loop.rs  full_to_llvm.rs  hello_print.rs  multi_vars_loop.rs  test_assign_simple.rs  test_assignment_fix.rs  test_complex.rs  test_for_loop.rs  test_loop_compilation.rs  test_loops.rs  test_simple_assign.rs  triple_nested_loop.rs  verify_examples.rs  while_loop_example.rs  working_loop.rs
crates/zulon-codegen-llvm/src/: abi.rs  codegen.rs  enum_layout.rs  error.rs  layout.rs  lib.rs  optimize.rs  ty.rs
crates/zulon-codegen-llvm/tests/: integration_test.rs
crates/zulon-compiler/: Cargo.toml
crates/zulon-compiler/src/: air.rs  backend.rs  cap.rs  compiler.rs  diag.rs  effect.rs  error.rs  hir.rs  ids.rs  intern.rs  lex.rs  lib.rs  macro_expander.rs  main.rs  mir.rs  parse.rs  query.rs  resolve.rs  ty.rs
crates/zulon-compiler/tests/: compiler_validation_test.rs  integration_tests.rs
crates/zulon-lir/: Cargo.toml
crates/zulon-lir/examples/: debug_lir_output.rs  debug_main_lir.rs  debug_phi.rs  full_pipeline.rs
crates/zulon-lir/src/: error.rs  lib.rs  lir.rs  lower.rs  optimize.rs  ty.rs
crates/zulon-macros/: Cargo.toml
crates/zulon-macros/src/: lib.rs
crates/zulon-mir/: Cargo.toml
crates/zulon-mir/examples/: async_await_mir_test.rs  async_transform_test.rs  debug_compute.rs  debug_constant.rs  debug_hir.rs  debug_main.rs  debug_nested_loop.rs  mir_lowering.rs  test_param.rs
crates/zulon-mir/src/: async_transform.rs  borrow.rs  effect.rs  error.rs  lib.rs  lower.rs  mir.rs  ty.rs
crates/zulon-parser/: Cargo.toml
crates/zulon-parser/examples/: closure_test.zl  e2e_test.rs  test_attributes.rs  test_loop_parsing.rs  test_mutable.rs  verify_macro_parsing.rs
crates/zulon-parser/src/: diagnostic.rs  lib.rs
crates/zulon-parser/src/ast/: mod.rs
crates/zulon-parser/src/lexer/: error.rs  mod.rs  token.rs
crates/zulon-parser/src/parser/: mod.rs
crates/zulon-parser/tests/: async_await_tests.rs  closure_parsing_test.rs  defer_tests.rs  error_handling_tests.rs  match_expression_tests.rs  template_string_tests.rs  tuple_tests.rs
crates/zulon-runtime-scheduler/: Cargo.toml
crates/zulon-runtime-scheduler/src/: basic_executor.rs  event_loop_executor.rs  event_loop_integration.rs  event_loop_waker.rs  executor.rs  executor_with_waker.rs  lib.rs  local_executor.rs  task.rs  waker_registry.rs
crates/zulon-runtime-scheduler/tests/: event_loop_integration_test.rs  integration_test.rs
crates/zulon-std-core/: Cargo.toml  build.rs
crates/zulon-std-core/src/: hashmap.rs  hashset.rs  lib.rs  option.rs  prelude.rs  result.rs  string.rs  test.rs  test_runner.rs  traits.rs  vec.rs  vecdeque.rs
crates/zulon-tests-integration/: Cargo.toml
crates/zulon-tests-integration/src/: e2e_async_tests.rs  error_handling_tests.rs  lib.rs
crates/zulon-tools-yan/: Cargo.toml
crates/zulon-tools-yan/src/: build.rs  lib.rs  main.rs  test_runner.rs
crates/zulon-typeck/: Cargo.toml
crates/zulon-typeck/benches/: effect_benchmarks.rs
crates/zulon-typeck/examples/: closure_type_inference_test.rs
crates/zulon-typeck/src/: checker.rs  diagnostic.rs  effect.rs  effect_inference.rs  env.rs  error.rs  infer.rs  lib.rs  ty.rs
crates/zulon-typeck/tests/: effect_integration_tests.rs  type_checker_tests.rs
(+449 files in other folders)
