[package]
name = "zulon-async-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ZULON Language Team"]
description = "Effect-based async runtime for ZULON language"

[lib]
name = "zulon_async_runtime"
path = "src/lib.rs"

[[example]]
name = "async_runtime_demo"
path = "../../examples/async_runtime_demo.rs"

[dependencies]
thiserror = "2.0"
libc = "0.2"  # For epoll/kqueue syscalls
