[package]
name = "zulon-mir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zulon-std-core = { path = "../zulon-std-core" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
zulon-ext-test = { path = "../zulon-ext-test" }
