[package]
name = "zulon-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Lexer and parser for the ZULON programming language"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Diagnostics
zulon-diagnostic = { path = "../zulon-diagnostic" }

# Utilities
unicode-xid = "0.2"
unicode-segmentation = "1.11"

# Testing
[dev-dependencies]
criterion = "0.5"
