[package]
name = "zulon-runtime-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zulon-async-futures = { path = "../zulon-async-futures" }
zulon-runtime-io = { path = "../zulon-runtime-io" }

[dev-dependencies]
