[package]
name = "zulon-std-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# TODO: Add dependencies when needed
[dependencies]
zulon-runtime-core = { path = "../zulon-runtime-core" }

[dev-dependencies]
