[package]
name = "zulon-tests-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zulon-parser = { path = "../zulon-parser" }
zulon-hir = { path = "../zulon-hir" }
zulon-typeck = { path = "../zulon-typeck" }
zulon-mir = { path = "../zulon-mir" }

[dev-dependencies]
