[package]
name = "zulon-typeck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zulon-parser = { path = "../zulon-parser" }
zulon-diagnostic = { path = "../zulon-diagnostic" }
thiserror = "2.0"

[dev-dependencies]
